# lvgl_for_RP2040_Touch_LCD_1.69

./: CMakeLists.txt  README.md  ReadmeCN.txt  ReadmeEN.txt  main.c
examples/: CMakeLists.txt  ImageData.c  ImageData.h  LCD_1in69_test.c  LCD_Test.h
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lib/Fonts/: CMakeLists.txt  fonts.h
lib/GUI/: CMakeLists.txt  GUI_Paint.c
lib/LCD/: CMakeLists.txt  LCD_1in69.c  LCD_1in69.h  Touch_1in69.c  Touch_1in69.h
lib/porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
uf2/: RP2040-Touch-1.69-LCD-Test.uf2  main.uf2
